# ddg-exercises

./: .clang-format  .gitignore  .gitmodules  README.md
core/include/: mesh_subset.h
core/src/: discrete-exterior-calculus.cpp  geometry.cpp
projects/direction-field-design/: CMakeLists.txt  README.md
projects/direction-field-design/include/: test-connect-soln.txt  test-connect-sphere.txt  trivial-connections.h
projects/direction-field-design/src/: main.cpp  test-connect.cpp  trivial-connections.cpp
projects/discrete-curvatures-and-normals/: CMakeLists.txt  README.md
projects/discrete-curvatures-and-normals/src/: main.cpp  test-curv.cpp
projects/discrete-exterior-calculus/: CMakeLists.txt  README.md
projects/discrete-exterior-calculus/include/: test-dec-soln.txt
projects/discrete-exterior-calculus/src/: main.cpp  test-dec.cpp
projects/geodesic-distance/: CMakeLists.txt  README.md
projects/geodesic-distance/include/: heat-method.h  test-heat-soln.txt
projects/geodesic-distance/src/: heat-method.cpp  main.cpp  test-heat.cpp
projects/geometric-flow/: CMakeLists.txt  README.md
projects/geometric-flow/include/: mean-curvature-flow.h  modified-mean-curvature-flow.h  test-flow-soln.txt
projects/geometric-flow/src/: main.cpp  mean-curvature-flow.cpp  modified-mean-curvature-flow.cpp  test-flow.cpp
projects/parameterization/: CMakeLists.txt  README.md
projects/parameterization/include/: spectral-conformal-parameterization.h  test-param-soln.txt
projects/parameterization/src/: main.cpp  spectral-conformal-parameterization.cpp  test-param.cpp
projects/poisson-problem/: CMakeLists.txt  README.md
projects/poisson-problem/include/: scalar-poisson-problem.h  test-spp-soln.txt
projects/poisson-problem/src/: main.cpp  scalar-poisson-problem.cpp  test-spp.cpp
projects/simplicial-complex-operators/: CMakeLists.txt  README.md
projects/simplicial-complex-operators/include/: simplicial-complex-operators.h
projects/simplicial-complex-operators/src/: main.cpp  simplicial-complex-operators.cpp  test-sco.cpp
projects/vector-field-decomposition/: CMakeLists.txt  README.md
projects/vector-field-decomposition/include/: harmonic-bases.h  hodge-decomposition.h  test-decomp-soln.txt  tree-cotree.h
projects/vector-field-decomposition/src/: harmonic-bases.cpp  hodge-decomposition.cpp  main.cpp  test-decomp.cpp  tree-cotree.cpp
utils/include/: colormap.h  distortion.h  setup.h  solvers.h
utils/src/: colormap.cpp  distortion.cpp  solvers.cpp
